--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background: #000000;
+    zoom: 0.8;
 }
 
 h3 {
@@ -925,4 +926,5 @@ h3 {
     display: inline-block;
     text-decoration: none;
     font-weight: 600;
+
 }
